--- a/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
@@ -46,10 +46,12 @@
     <Compile Include="AccountView.cs" />
     <Compile Include="ContactDetails.cs" />
     <Compile Include="EmployeeInfo.cs" />
+    <Compile Include="FamilyMemberModel.cs" />
     <Compile Include="PersonalDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KeyValueModel.cs" />
     <Compile Include="SecurityQuestionsModel.cs" />
+    <Compile Include="UserAccountModel.cs" />
     <Compile Include="UserModel.cs" />
     <Compile Include="UserSecurityQuestions.cs" />
   </ItemGroup>
