--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -156,11 +156,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\bootstrap.min.js" />
     <Content Include="Content\img\dashboard-logo.png" />
     <Content Include="Content\img\header-thumbnail.png" />
     <Content Include="Content\img\login-logo.png" />
     <Content Include="Content\img\main-logo.png" />
     <Content Include="Content\img\registration-logo.png" />
+    <Content Include="Content\jquery-3.3.1.js" />
     <Content Include="Content\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -213,6 +215,10 @@
     <Content Include="Views\Account\AccountDetails.cshtml" />
     <Content Include="Views\Account\ContactDetails.cshtml" />
     <Content Include="Views\Account\PersonalDetails.cshtml" />
+    <Content Include="Views\Account\MyAccount.cshtml" />
+    <Content Include="Views\Account\ProgramEventRegistration.cshtml" />
+    <Content Include="Views\Account\ClassesConfirm.cshtml" />
+    <Content Include="Views\Account\PaymentMethod.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
