Completed Functionality of Add Family Member

--- a/Chinmaya.Registration/Chinmaya.Registration.DAL/Chinmaya.Registration.DAL.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.DAL/Chinmaya.Registration.DAL.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Gender.cs">
       <DependentUpon>ChinmayiModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="GetUserFamilyMembers_Result.cs">
+      <DependentUpon>ChinmayiModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GetUserFamilyMember_Result.cs">
+      <DependentUpon>ChinmayiModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Grade.cs">
       <DependentUpon>ChinmayiModel.tt</DependentUpon>
     </Compile>
