--- a/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
@@ -44,7 +44,9 @@
   <ItemGroup>
     <Compile Include="AccountDetails.cs" />
     <Compile Include="AccountView.cs" />
+    <Compile Include="CheckPaymentModel.cs" />
     <Compile Include="ContactDetails.cs" />
+    <Compile Include="CurrentEventModel.cs" />
     <Compile Include="EmployeeInfo.cs" />
     <Compile Include="EventsModel.cs" />
     <Compile Include="FamilyMemberModel.cs" />
