modified MyAccount View with Models in the place of ViewBag

--- a/Chinmaya.Registration/Chinmaya.Registration.DAL/Chinmaya.Registration.DAL.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.DAL/Chinmaya.Registration.DAL.csproj
@@ -160,6 +160,9 @@
     <Compile Include="Gender.cs">
       <DependentUpon>ChinmayiModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="GetFamilyMemberForUser_Result.cs">
+      <DependentUpon>ChinmayiModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="GetUserFamilyMembers_Result.cs">
       <DependentUpon>ChinmayiModel.tt</DependentUpon>
     </Compile>
