--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -222,6 +222,7 @@
     <Content Include="Views\Account\ClassesConfirm.cshtml" />
     <Content Include="Views\Account\PaymentMethod.cshtml" />
     <Content Include="Views\Account\Event.cshtml" />
+    <Content Include="Views\Account\_AddFamilyMember.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
