--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -21,7 +21,11 @@
     <add key="ServiceAccountPassword" value="Ch!nw@y@"/>
   </appSettings>
   <system.web>
-    <authentication mode="None"/>
+    <customErrors mode="RemoteOnly" />    
+    <sessionState mode="InProc" timeout="30" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="30" slidingExpiration="true" />
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
