--- a/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KeyValueModel.cs" />
     <Compile Include="SecurityQuestionsModel.cs" />
+    <Compile Include="ToastModel.cs" />
     <Compile Include="UserAccountModel.cs" />
     <Compile Include="UserFamilyMember.cs" />
     <Compile Include="UserModel.cs" />
