--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -236,6 +236,7 @@
     <Content Include="Views\Account\Event.cshtml" />
     <Content Include="Views\Account\_AddFamilyMember.cshtml" />
     <Content Include="Views\Shared\_MessagePartial.cshtml" />
+    <Content Include="Views\_Confirmation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
