--- a/Chinmaya.Registration/Chinmaya.Registration.Utilities/Chinmaya.Registration.Utilities.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Utilities/Chinmaya.Registration.Utilities.csproj
@@ -35,6 +35,7 @@
       <HintPath>D:\Projects\FenML\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailManager.cs" />
     <Compile Include="EncryptDecrypt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
