EmaiManager Credentials added to webconfig app setting

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -19,6 +19,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="BaseURL" value="http://localhost:58742/" />
     <add key="ServiceAccountPassword" value="Ch!nw@y@" />
+    <add key="SMTPAddress" value="smtp.gmail.com" />
+    <add key="SMTPPort" value="587" />
+    <add key="SMTPUsername" value="dinesh.cesltd@gmail.com" />
+    <add key="SMTPPassword" value="D!nu91230" />
   </appSettings>
   <system.web>
     <customErrors mode="RemoteOnly" />    
