Forgot Password functionality partially finished

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -19,10 +19,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="BaseURL" value="http://localhost:58742/" />
     <add key="ServiceAccountPassword" value="Ch!nw@y@" />
-    <add key="SMTPAddress" value="smtp.gmail.com" />
+    <add key="SMTPAddress" value="smtp.office365.com" />
     <add key="SMTPPort" value="587" />
-    <add key="SMTPUsername" value="dinesh.cesltd@gmail.com" />
-    <add key="SMTPPassword" value="D!nu91230" />
+    <add key="SMTPUsername" value="srinath.terala@basavatarakam.com" />
+    <add key="SMTPPassword" value="Welcome123" />
   </appSettings>
   <system.web>
     <customErrors mode="RemoteOnly" />    
@@ -30,8 +30,8 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="30" slidingExpiration="true" />
     </authentication>
-    <compilation debug="true" targetFramework="4.6.1"/>
-    <httpRuntime targetFramework="4.6.1"/>
+    <compilation debug="true" targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.webServer>
     <modules>
