--- a/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
@@ -52,6 +52,7 @@
     <Compile Include="EmployeeInfo.cs" />
     <Compile Include="EventsModel.cs" />
     <Compile Include="FamilyMemberModel.cs" />
+    <Compile Include="ForgotPasswordModel.cs" />
     <Compile Include="MainEventModel.cs" />
     <Compile Include="MyAccountModel.cs" />
     <Compile Include="PersonalDetails.cs" />
