#1. Forgot Password Functionality is finished #2. New Layout page created for non-login pages #3. Reset Password Confirmation page added and can useful for both forgot password and reset password pages

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -240,6 +240,8 @@
     <Content Include="Views\Account\_AddFamilyMember.cshtml" />
     <Content Include="Views\Shared\_MessagePartial.cshtml" />
     <Content Include="Views\Account\ForgotPassword.cshtml" />
+    <Content Include="Views\Account\ResetForgotPassword.cshtml" />
+    <Content Include="Views\Shared\_LayoutPageOpen.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
