--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -19,10 +19,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="BaseURL" value="http://localhost:58742/" />
     <add key="ServiceAccountPassword" value="Ch!nw@y@" />
-    <add key="SMTPAddress" value="smtp.office365.com" />
-    <add key="SMTPPort" value="587" />
-    <add key="SMTPUsername" value="srinath.terala@basavatarakam.com" />
+    <add key="SMTPAddress" value="192.168.18.8" />
+    <add key="SMTPPort" value="25" />
+    <add key="SMTPUsername" value="testsmtp@cesltd.com" />
     <add key="SMTPPassword" value="Welcome123" />
+    <add key="ResetForgotPasswordLink" value="http://localhost:58740/Account/ResetForgotPassword/?user=" />
   </appSettings>
   <system.web>
     <customErrors mode="RemoteOnly" />    
