--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -24,6 +24,7 @@
     <add key="SMTPUsername" value="testsmtp@cesltd.com" />
     <add key="SMTPPassword" value="Welcome123" />
     <add key="ResetForgotPasswordLink" value="http://localhost:58740/Account/ResetForgotPassword/?user=" />
+    <add key="SharedAccountRequestLink" value="http://localhost:58740/Account/SharedAccountRequest/?user=" />
   </appSettings>
   <system.web>
     <customErrors mode="RemoteOnly" />    
