User redirected to his homepage if user has not got logged out

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -523,6 +523,7 @@
     <Content Include="Views\Shared\_LayoutPageOpen.cshtml" />
     <Content Include="Views\Account\Admin.cshtml" />
     <Content Include="Views\Account\SharedAccountRequest.cshtml" />
+    <Content Include="Views\Account\UserActivation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
