--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -25,6 +25,7 @@
     <add key="SMTPPassword" value="Welcome123" />
     <add key="ResetForgotPasswordLink" value="http://localhost:58740/Account/ResetForgotPassword/?user=" />
     <add key="SharedAccountRequestLink" value="http://localhost:58740/Account/SharedAccountRequest/?user=" />
+    <add key="UserActivationLink" value="http://localhost:58740/Account/UserActivation/?user=" />
   </appSettings>
   <system.web>
     <customErrors mode="RemoteOnly" />    
