--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Providers\SessionVar.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-datepicker.standalone.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
