New Services Account, Common, Event and User are created and moved methods to the appropriate services and can consume in the controllers.

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -155,6 +155,9 @@
     <Compile Include="Providers\CustomPrincipal.cs" />
     <Compile Include="Providers\SessionVar.cs" />
     <Compile Include="Services\AccountService.cs" />
+    <Compile Include="Services\CommonService.cs" />
+    <Compile Include="Services\EventService.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-datepicker.standalone.min.css" />
