--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -582,6 +582,9 @@
     <Content Include="Views\Shared\_LayoutPageRegister.cshtml" />
     <Content Include="Views\Account\NotAuthorized.cshtml" />
     <Content Include="Views\Account\_ChangePassword.cshtml" />
+    <Content Include="Views\Account\_ChangeAddress.cshtml" />
+    <Content Include="Views\Account\_ChangePhone.cshtml" />
+    <Content Include="Views\Account\_ChangeEmail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
