Refactored the whole project structure

--- a/Chinmaya.Registration/Chinmaya.Registration.BAL/Chinmaya.Registration.BAL.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.BAL/Chinmaya.Registration.BAL.csproj
@@ -136,8 +136,10 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\MasterAPIController.cs" />
-    <Compile Include="Controllers\UserAPIController.cs" />
+    <Compile Include="Controllers\EventController.cs" />
+    <Compile Include="Controllers\MasterController.cs" />
+    <Compile Include="Controllers\PaymentController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -146,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\ChinmayaWebApi.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
