--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -192,8 +192,11 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\EventController.cs" />
+    <Compile Include="Controllers\EventRegistrationController.cs" />
+    <Compile Include="Controllers\PaymentController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Filters\CheckSessionOutFilter.cs" />
     <Compile Include="Filters\NoCacheAttribute.cs" />
@@ -546,9 +549,6 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
@@ -567,16 +567,16 @@
     <Content Include="Views\Account\ContactDetails.cshtml" />
     <Content Include="Views\Account\PersonalDetails.cshtml" />
     <Content Include="Views\Account\MyAccount.cshtml" />
-    <Content Include="Views\Account\ProgramEventRegistration.cshtml" />
-    <Content Include="Views\Account\ClassesConfirm.cshtml" />
-    <Content Include="Views\Account\PaymentMethod.cshtml" />
-    <Content Include="Views\Account\Event.cshtml" />
+    <Content Include="Views\EventRegistration\ProgramEventRegistration.cshtml" />
+    <Content Include="Views\EventRegistration\ClassesConfirm.cshtml" />
+    <Content Include="Views\Payment\PaymentMethod.cshtml" />
+    <Content Include="Views\Event\Event.cshtml" />
     <Content Include="Views\Account\_AddFamilyMember.cshtml" />
     <Content Include="Views\Shared\_MessagePartial.cshtml" />
     <Content Include="Views\Account\ForgotPassword.cshtml" />
     <Content Include="Views\Account\ResetForgotPassword.cshtml" />
     <Content Include="Views\Shared\_LayoutPageOpen.cshtml" />
-    <Content Include="Views\Account\Admin.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Account\SharedAccountRequest.cshtml" />
     <Content Include="Views\Account\UserActivation.cshtml" />
     <Content Include="Views\Shared\_LayoutPageRegister.cshtml" />
