--- a/Chinmaya.Registration/Chinmaya.Registration.UI/packages.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net461" />
@@ -34,5 +35,6 @@
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Twitter.Bootstrap" version="1.1.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
