Update email, Phone, address, password functions added for admin login

--- a/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
@@ -69,6 +69,7 @@
     <Compile Include="AccountDetails.cs" />
     <Compile Include="AccountView.cs" />
     <Compile Include="AdminModel.cs" />
+    <Compile Include="AdminModelcs.cs" />
     <Compile Include="ApproveRejectModel.cs" />
     <Compile Include="CheckPaymentModel.cs" />
     <Compile Include="ClassesConfirmModel.cs" />
