--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -581,6 +581,7 @@
     <Content Include="Views\Common\_ChangePhone.cshtml" />
     <Content Include="Views\Common\_ChangeEmail.cshtml" />
     <Content Include="Views\Shared\_LayoutPageRegistration.cshtml" />
+    <Content Include="Views\Shared\_MainMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
