--- a/Chinmaya.Registration/Chinmaya.Registration.UI/packages.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net461" />
-  <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net461" />
+  <package id="bootstrap" version="3.3.0" targetFramework="net461" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net461" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net461" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net461" />
@@ -30,6 +32,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
