Added EventRegistrationModel and functionality related to it. Changed ClassesConfirmView to select events here also. Added Deleted Functionality for Event Deletion

--- a/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
@@ -77,6 +77,7 @@
     <Compile Include="CurrentEventModel.cs" />
     <Compile Include="EmailTemplateModel.cs" />
     <Compile Include="EmployeeInfo.cs" />
+    <Compile Include="EventRegistrationModel.cs" />
     <Compile Include="EventsModel.cs" />
     <Compile Include="FamilyMemberModel.cs" />
     <Compile Include="ForgotPasswordModel.cs" />
