NotFound page added

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -28,7 +28,11 @@
     <add key="UserActivationLink" value="http://localhost:58740/Account/UserActivation/?user=" />
   </appSettings>
   <system.web>
-    <customErrors mode="RemoteOnly" />    
+    <!--<customErrors mode="RemoteOnly" />-->
+    <customErrors mode="On">
+      <error statusCode="500" redirect="~/Shared/Error"/>
+      <error statusCode="404" redirect="~/Account/NotFound"/>
+    </customErrors>
     <sessionState mode="InProc" timeout="30" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="30" slidingExpiration="true" />
