# changed to javascript void(0)

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Chinmaya.Registration.UI.csproj
@@ -382,12 +382,22 @@
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\img\address.png" />
+    <Content Include="Content\img\cart-icon.png" />
+    <Content Include="Content\img\change-password.png" />
     <Content Include="Content\img\dashboard-logo.png" />
+    <Content Include="Content\img\email.png" />
     <Content Include="Content\img\header-thumbnail.png" />
+    <Content Include="Content\img\info-icon.png" />
     <Content Include="Content\img\login-logo.png" />
     <Content Include="Content\img\main-logo.png" />
+    <Content Include="Content\img\past-transations.png" />
+    <Content Include="Content\img\phone.png" />
+    <Content Include="Content\img\print-tax.png" />
     <Content Include="Content\img\registration-logo.png" />
     <Content Include="Content\img\search.png" />
+    <Content Include="Content\img\update-family-info-active.png" />
+    <Content Include="Content\img\update-family-info.png" />
     <Content Include="Content\jquery-3.3.1.js" />
     <Content Include="Content\jquery-confirm.min.css" />
     <Content Include="Content\Site.css" />
