--- a/Chinmaya.Registration/Chinmaya.Registration.UI/packages.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/packages.config
@@ -9,6 +9,7 @@
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net461" />
