Changes to Logging Module

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -125,7 +125,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <log4net>
+  <log4net debug="true" threshold="ON">
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="C:\\LOGS\" />
       <datePattern value="'RegistrationApp.log_'yyyy-MM-dd'.log'" />
