EnterKeyPress issue solved. Added SharedAccountModel to update SharedAccount Table with Shared User information

--- a/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Models/Chinmaya.Registration.Models.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ResetForgotPasswordModel.cs" />
     <Compile Include="ResetPasswordModel.cs" />
     <Compile Include="SecurityQuestionsModel.cs" />
+    <Compile Include="SharedAccountModel.cs" />
     <Compile Include="ToastModel.cs" />
     <Compile Include="UpdateEmail.cs" />
     <Compile Include="UpdatePasswordModel.cs" />
