--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- Add log4net config section-->
-    <!--<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />-->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="ChinmayaEntities" connectionString="metadata=res://*/ChinmayiModel.csdl|res://*/ChinmayiModel.ssdl|res://*/ChinmayiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.18.36;initial catalog=Chinmaya;user id=dhanamjaya;password=Welcome123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -125,22 +125,21 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <!--<log4net debug="true" threshold="ON">
-    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="C:\\LOGS\" />
-      <datePattern value="'RegistrationApp.log_'yyyy-MM-dd'.log'" />
+  <log4net debug="true" threshold="ON">
+    <appender name="ChinmayaAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="C:\\ChinmayaLOGS\ChinmayaAppender.log" />
+      <encoding value="utf-8" />
       <appendToFile value="true" />
       <rollingStyle value="Date" />
-      <staticLogFileName value="false" />
-      <layout type="log4net.Layout.PatternLayout, log4net">
-        <conversionPattern value="%date [%thread] %-5level %logger [%method] - %message%newline" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %level [%thread] %type.%method - %message%n" />
       </layout>
     </appender>
     <root>
-      <level value="INFO" />
-      <appender-ref ref="RollingLogFileAppender" />
+      <level value="All" />
+      <appender-ref ref="ChinmayaAppender" />
     </root>
-  </log4net>-->
+  </log4net>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
