Account Locked for 3 unsuccessful attempts

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Web.config
@@ -27,6 +27,9 @@
     <add key="ResetForgotPasswordLink" value="http://localhost:58740/Account/ResetForgotPassword/?user=" />
     <add key="SharedAccountRequestLink" value="http://localhost:58740/Account/SharedAccountRequest/?user=" />
     <add key="UserActivationLink" value="http://localhost:58740/Account/UserActivation/?user=" />
+    <add key="UserLockoutEnabledByDefault" value="true" />
+    <add key="DefaultAccountLockoutTimeSpan" value="00:05" />
+    <add key="MaxFailedAccessAttemptsBeforeLockout" value="3" />
   </appSettings>
   <system.web>
     <!--<customErrors mode="RemoteOnly" />-->
