--- a/Chinmaya.Registration/Chinmaya.Registration.Utilities/Chinmaya.Registration.Utilities.csproj
+++ b/Chinmaya.Registration/Chinmaya.Registration.Utilities/Chinmaya.Registration.Utilities.csproj
@@ -38,7 +38,7 @@
     </Reference>
     <Reference Include="SendGrid, Version=9.10.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\amulyad\Desktop\SendGrid.dll</HintPath>
+      <HintPath>..\Chinmaya.Registration.UI\ExternalDLLs\SendGrid.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
